temporary fix for clamp() not working on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,7 @@ h3 {
 
 }
 
-@media (min-height: 576px) {
+@media (min-width: 576px) {
 
   /* Temporary to clamp() not working on smaller screens */
 
